# burin

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  Pipfile  README.rst  pyproject.toml
.github/workflows/: pull_request_check.yaml  push_check.yaml  test_and_build.yaml
docs/: burin.rst  conf.py  handlers.rst  index.rst  intro.rst  project.rst
src/burin/: __init__.py  _burin.py
src/burin/_config/: basic_config.py
src/burin/_filters/: filterer.py
src/burin/_formatters/: __init__.py  _brace_style.py  _dollar_style.py  _percent_style.py  buffering_formatter.py  formatter.py
src/burin/_handlers/: __init__.py  _references.py  base_rotating_handler.py  datagram_handler.py  file_handler.py  handler.py  http_handler.py  nt_event_log_handler.py  queue_handler.py  smtp_handler.py  stream_handler.py  syslog_handler.py  timed_rotating_file_handler.py
src/burin/_log_levels/: __init__.py
src/burin/_log_records/: brace_record.py  dollar_record.py  log_record.py
src/burin/_loggers/: __init__.py  _manager.py  logger.py
src/burin/_logging/: __init__.py  _manager.py
src/burin/_state/: __init__.py
src/burin/_threading/: __init__.py  _fork_protection.py
src/burin/_warnings/: capture.py
tests/: conftest.py  test_formatters.py  test_log_levels.py  test_log_records.py
tests/test_handlers/: test_file_handler.py  test_handler.py  test_stream_handler.py
