[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "burin"
authors = [{name = "William Foster"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries"
]
description = "Logging with added features and convenience."
dynamic = ["version"]
keywords = ["logging"]
license-files = {paths = ["LICENSE"]}
readme = "README.rst"
requires-python = ">=3.6"

[project.optional-dependencies]
dev = [
    "ruff ~=0.1.14"
]
doc = [
    "Sphinx ~=5.0.1",
    "sphinx-rtd-theme ~=1.0"
]


[project.urls]
Documentation = "https://burin.readthedocs.io/"
Source = "https://github.com/PeacefullyDisturbed/burin"

[tool.ruff]
fix = false
line-length = 119
select = ["E", "F", "W"]
src = ["src"]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.doc]
features = ["doc"]

[tool.hatch.envs.doc.scripts]
make = "cd docs && make {args}"

[tool.hatch.version]
path = "src/burin/__init__.py"
