[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "burin"
authors = [{name = "William Foster"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries"
]
description = "Logging with added features and convenience."
dynamic = ["version"]
keywords = ["logging"]
license-files = {paths = ["LICENSE"]}
readme = "README.rst"
requires-python = ">=3.6"

[project.optional-dependencies]
dev = [
    "ruff ~=0.1.14"
]
doc = [
    "Sphinx ~=7.2.6",
    "sphinx-rtd-theme ~=2.0.0"
]


[project.urls]
Documentation = "https://burin.readthedocs.io/"
Source = "https://github.com/PeacefullyDisturbed/burin"

### Hatch ###

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
lint = "ruff check {args}"

[tool.hatch.envs.doc]
features = ["doc"]

[tool.hatch.envs.doc.scripts]
make = "cd docs && make {args}"

[tool.hatch.version]
path = "src/burin/__init__.py"

### Ruff ###

[tool.ruff]
fix = false
ignore = ["D2", "D4", "PLR0913", "S110", "S112", "SIM105"]
line-length = 119
select = ["A", "ARG", "B", "C4", "C90", "D", "E", "F", "PERF", "PL", "Q", "RET", "S", "SIM", "W", "YTT"]
src = ["src"]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.ruff.per-file-ignores]
"*__init__.py" = ["F401"]
"docs/conf.py" = ["A001", "E402"]
